feat wishlist: add item booking feature
